fix: z-index 추가
* z-index가 낮아서 다른 컨텐츠가 투과되어 보였다.

--- a/client/src/style/common/header.scss
+++ b/client/src/style/common/header.scss
@@ -5,6 +5,7 @@
   top: 0;
   position: sticky;
   background-color: $main-background;
+  z-index: $z-index-s;
 }
 
 .header-wrap {
